--- a/Hansha/Content/index.html
+++ b/Hansha/Content/index.html
@@ -9,16 +9,14 @@
        margin: 0;
        padding: 0;
      }
-     canvas {
-       max-width: 100%;
-       max-height: 100%;
-     }
    </style>
  </head>
  <body>
    <canvas id="canvas" width="100" height="100"></canvas>
+   <!--<script type="text/javascript" src="protocols/hyperProtocol.js"></script>  -->
    <script type="text/javascript" src="protocols/simpleProtocol.js"></script>
    <script type="text/javascript" src="binaryReader.js"></script>
+   <script type="text/javascript" src="rawInflate.min.js"></script>
    <script type="text/javascript" src="connect.js"></script>
  </body>
 </html>
